<resources>
    <string name="app_name">USTask_MostafaIbrahim</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="server_error">Server error</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="login_signup">Login/Signup</string>
    <string name="need_to_login">you have to login/Signup to continue</string>
    <string name="english">English</string>
    <string name="arabic">اللغة العربية</string>
    <string name="change_language">Change Language</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_back">Log back into your account</string>
    <string name="logo">logo</string>
    <string name="show_more">Show More</string>
    <string name="log_in">Log in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="billshash">#1569987</string>
    <string name="status">Status</string>
    <string name="newStatus">New</string>
    <string name="TotalPrice">Total Price</string>
    <string name="price">400 LE</string>
    <string name="Date">Date</string>
    <string name="date">1/1/2020</string>
    <string name="orderDetials">Order Details</string>
    <string name="name">name</string>
</resources>