<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="9dp"
    app:cardElevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/billshash"
        android:id="@+id/billshash"
        android:paddingLeft="25dp"
        android:paddingRight="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">


            <TextView
                android:id="@+id/statusId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/status"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/NewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/newStatus"
                android:textColor="@color/billsrow"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/arrow"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/TotalPrice"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/price"
                android:textColor="@color/blueapp"
                android:textSize="16sp" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/arrow"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/Date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/date"
                android:textColor="@color/blueapp"
                android:textSize="16sp" />


        </LinearLayout>


        <TextView
            android:id="@+id/bill_order_color"
            android:background="@color/billsrow"
            android:backgroundTintMode="add"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:paddingTop="10dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="8sp"
            android:textColor="@color/white"
            android:paddingBottom="20dp"
            android:visibility="visible"
            android:text="@string/orderDetials"
            app:drawableBottomCompat="@drawable/ic_arrow_right"
            tools:ignore="SmallSp"
            tools:targetApi="lollipop" />


    </LinearLayout>




</androidx.cardview.widget.CardView>