<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Login.View.LoginActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:text="@string/welcome_back"
      android:textColor="@color/blueapp"
      android:textSize="29sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/blueapp"
      android:layout_marginTop="8dp"
      android:text="@string/log_back"
      android:textSize="12sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="140dp"
      android:layout_height="60dp"
      android:contentDescription="@string/logo"
      android:scaleType="fitXY"
      android:src="@drawable/onx"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.129"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.059" />

  <ImageView
      android:layout_width="100dp"
      android:layout_height="106dp"
      android:contentDescription="@string/logo"
      android:scaleType="fitXY"
      android:src="@drawable/ic_circle"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <EditText
      android:id="@+id/userId"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:layout_margin="20dp"
      android:singleLine="true"
      android:gravity="center"
      android:inputType="number"
      android:background="@drawable/edit_text_background"
      android:hint="User ID"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />



  <EditText
      android:id="@+id/passwordLogin"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:layout_margin="20dp"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      android:singleLine="true"
      android:background="@drawable/edit_text_background"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:hint="password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/userId" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/show_more"
      android:textColor="@color/blueapp"
      android:textSize="14dp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.952"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

  <TextView
      android:id="@+id/Buttonlogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:background="@drawable/buton_ds"
      android:padding="16dp"
      android:text="@string/log_in"
      android:textColor="@color/white"
      android:gravity="center"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="194.24dp"
      android:layout_height="170.35dp"
      android:contentDescription="@string/logo"
      android:scaleType="fitXY"
      android:src="@drawable/delivery"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Buttonlogin" />

  <ImageView
      android:id="@+id/LanguageButton"
      android:layout_width="27dp"
      android:layout_height="27dp"
      android:contentDescription="@string/logo"
      android:scaleType="fitXY"
      android:src="@drawable/ic_language"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.956"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.036" />


</androidx.constraintlayout.widget.ConstraintLayout>